dtag/src/Learner/Hierarchy/UnitBox/test/.integrate.dtag.out0
1 = 1
2 = 2
2/3 = 0.662186379928315
1/9 = 0.113673436877738
4 = 4.03433922996878
